# mrc

./: .gitignore  AGENTS.md  API_Review.md  API_Review_v2.md  APIs.md  CLAUDE.md  CONVERSION_GAPS.md  Cargo.toml  Dev_focus.md  LICENSE  README.md  REFACTOR_PLAN.md  REVIEW.md  analysis_and_fix_scheme.md  compare.md  engine.md  gaps.md  issues.md  mrc.md  mrc_parallel.md  mrcfile-official.md  optimization.md  performance_refine_plan.md  refactor.md  review.md  review_prompt.md  roadmap.md  rust_notebook.md  update.md
.github/workflows/: rust.yml
.kimi-code/: local.toml
backup/: data.rs  endian.rs  header.rs  traits.rs  types.rs  view.rs
benches/: bench.rs
docs/: data_flow.md  debug_mode.md  review_guid.md
examples/: generate_mrc_files.rs  test_all_features.rs  test_real_mrc.rs  validate.rs
src/: access.rs  any_reader.rs  axis.rs  block.rs  bzip2.rs  bzip2mrc.rs  data_block.rs  decode.rs  dynamic.rs  encode.rs  encoding.rs  endian.rs  error.rs  ext_header.rs  extended.rs  fei.rs  gzip.rs  header.rs  iter.rs  lib.rs  mmap_reader.rs  mode.rs  mrcfile.rs  reader.rs  reader_common.rs  serde_byte_array.rs  simd.rs  stats.rs  storage.rs  validate.rs  view.rs  volume.rs  volume_trait.rs  voxel.rs  writer.rs
src/access/: block.rs  dynamic.rs  mod.rs  traits.rs  volume.rs  volume_trait.rs
src/core/: axis.rs  error.rs  mod.rs  mode.rs
src/engine/: block.rs  codec.rs  convert.rs  endian.rs  mod.rs  pipeline.rs  simd.rs  stats.rs
src/engine/simd/: aarch64.rs  mod.rs  x86.rs
src/header/: agar.rs  ccp4.rs  extended.rs  fei.rs  mod.rs  mrco.rs  raw.rs  seri.rs  validated.rs
src/io/: buffered.rs  bzip2.rs  gzip.rs  mmap_reader.rs  mod.rs  reader.rs  reader_common.rs  traits.rs  writer.rs
src/voxel/: codex.rs  encoding.rs  endian.rs  mod.rs  types.rs
test/: benchmark.rs  encode_decode_bench.rs  mrcfile_test.rs  performance.rs  review.rs  tests.rs
tests/: api_comprehensive.rs  integration.rs
