[package]
name = "mrc"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Zero-copy, zero-allocation MRC-2014 file format reader/writer for Rust"
license = "MIT"
repository = "https://github.com/elemeng/mrc"
homepage = "https://github.com/elemeng/mrc"
documentation = "https://docs.rs/mrc"
keywords = ["mrc", "cryo-em", "cryo-ET", "microscopy", "scientific-computing"]
categories = ["science", "data-structures", "no-std", "memory-management"]
readme = "README.md"

[dependencies]
bytemuck = { version = "1.15", default-features = false, features = ["derive"] }
half = { version = "2.4", default-features = false, optional = true }
thiserror = { version = "2.0.16", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[features]
default = ["std", "f16"]
std = []
f16 = ["dep:half"]
