[package]
name = "mrc"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Zero-copy, zero-allocation MRC-2014 file format reader/writer for Rust"
license = "MIT"
repository = "https://github.com/elemeng/mrc"
homepage = "https://github.com/elemeng/mrc"
documentation = "https://docs.rs/mrc"
keywords = ["mrc", "cryo-em", "cryo-ET", "microscopy", "scientific-computing"]
categories = ["science", "data-structures", "no-std", "memory-management"]
readme = "README.md"

[dependencies]
memmap2 = { version = "0.9", optional = true }
thiserror = { version = "2.0.16", default-features = false }
rayon = { version = "1.10", optional = true }
once_cell = { version = "1.19", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"




[features]
default = ["std", "mmap", "f16", "parallel"]
mmap = ["std", "dep:memmap2"]
std = ["dep:once_cell"]
f16 = []
parallel = ["std", "dep:rayon"]
simd = ["std"]
