[package]
name = "mrc"
version = "0.5.1"
edition = "2024"
rust-version = "1.85"
description = "MRC-2014 file format reader/writer for cryo-EM — SIMD-accelerated, mmap-enabled"
license = "MIT"
repository = "https://github.com/elemeng/mrc"
homepage = "https://github.com/elemeng/mrc"
documentation = "https://docs.rs/mrc"
keywords = ["mrc", "cryo-em", "cryo-ET", "microscopy", "scientific-computing"]
categories = ["science", "data-structures", "memory-management"]
readme = "README.md"

[dependencies]
memmap2 = { version = "0.9", optional = true }
thiserror = { version = "2.0.18", default-features = false }
rayon = { version = "1.12", optional = true }
half = { version = "2.7", optional = true }
flate2 = { version = "1.1", optional = true }
bzip2 = { version = "0.5", optional = true }
ndarray = { version = "0.16", optional = true }
serde = { version = "1", optional = true, default-features = false, features = ["derive", "std"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.27"


[features]
default = ["mmap", "f16", "simd", "parallel", "gzip"]
mmap = ["dep:memmap2"]
f16 = ["dep:half"]
parallel = ["dep:rayon"]
simd = []
gzip = ["dep:flate2"]
bzip2 = ["dep:bzip2"]
ndarray = ["dep:ndarray"]
serde = ["dep:serde"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
